# picturas-watermark-tool

picturas-watermark-tool-ms/: Untitled.java  pyproject.toml
picturas-watermark-tool-ms-main/: .env  .gitignore  pyproject.toml
picturas-watermark-tool-ms-main/picturas_watermark_tool_ms/: image_uri_utils.py  watermark_request_message.py  watermark_result_message.py  watermark_tool.py
